[package]
authors = ["IML Team <iml@whamcloud.com>"]
description = "Scrapes Lustre stats and aggregates into JSON or YAML"
edition = "2021"
license = "MIT"
name = "lustre_collector"
version = "0.6.2"

[dependencies]
clap = { version = "4", features = ["derive"] }
combine = "=4.6.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
insta = "1"

[profile.release]
lto = true
